@@ -41,22 +41,22 @@ define( function( require ) {
 
     var updateFormula = function( solute ) {
       // use solute formula
-      if ( solution.volume.get() === 0 ) {
+      if ( solution.volume.value === 0 ) {
         formulaNode.text = "";
       }
-      else if ( solution.concentration.get() === 0 ) {
+      else if ( solution.concentration.value === 0 ) {
         formulaNode.text = MSymbols.WATER;
       }
       else {
-        formulaNode.text = solution.solute.get().formula;
+        formulaNode.text = solution.solute.value.formula;
       }
       // center formula in background
       formulaNode.centerX = backgroundNode.centerX;
       formulaNode.centerY = backgroundNode.centerY;
     };
-    solution.solute.addObserver( updateFormula );
-    solution.volume.addObserver( updateFormula );
-    solution.concentration.addObserver( updateFormula );
+    solution.solute.link( updateFormula );
+    solution.volume.link( updateFormula );
+    solution.concentration.link( updateFormula );
   }
 
   inherit( BeakerLabelNode, Node );
